[package]
name = "zeromq"
version = "0.5.0-pre"
authors = [
    "Alexei Kornienko <alexei.kornienko@gmail.com>",
    "Ryan Butler <thebutlah@gmail.com>",
    "Kyle Kelley <rgbkrk@gmail.com>"
]
edition = "2021"
description = "A native Rust implementation of ZeroMQ"
license = "MIT"
repository = "https://github.com/zeromq/zmq.rs"
rust-version = "1.62.0"

[features]
default = ["tokio-runtime", "all-transport"]
tokio-runtime = ["tokio", "tokio-util"]
async-std-runtime = ["async-std"]
async-dispatcher-runtime = ["async-std", "async-dispatcher"]
async-dispatcher-macros = ["async-dispatcher/macros"]
all-transport = ["ipc-transport", "tcp-transport"]
ipc-transport = []
tcp-transport = []
tls-transport = ["tokio-runtime", "tokio-rustls", "cert-manager"]
quic-transport = [
    "tokio-runtime",
    "quiche",
    "cert-manager",
    "lazy_static",
    "rand/thread_rng",
    "tempfile"
]

[dependencies]
async-dispatcher = { version = "0.1", optional = true }
async-std = { version = "1", features = ["attributes"], optional = true }
async-trait = "0.1"
asynchronous-codec = "0.7"
bytes = "1"
cert-manager = { path = "../network-experiment/cert-manager", optional = true }
crossbeam-queue = "0.3"
dashmap = "6.1"
futures = "0.3"
lazy_static = { version = "1.0", optional = true }
log = "0.4"
num-traits = "0.2"
once_cell = "1"
parking_lot = "0.12"
quiche = { version = "0.23", optional = true }
rand = "0.9"
regex = { version = "1", default-features = false, features = [
    "std",
    "unicode-perl",
] }
tempfile = { version = "3.19", optional = true }
thiserror = "2.0"
tokio = { version = "1", features = ["full"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
async-dispatcher = { version = "0.1", features = ["macros"] }
chrono = "0.4"
criterion = "0.5"
hex = "0.4"
pretty_env_logger = "0.5"
zmq2 = "0.5"

[lib]
bench = false

[[bench]]
name = "pub_sub"
harness = false
bench = false

[[bench]]
name = "req_rep"
harness = false

[[example]]
name = "message_quic_broker"
required-features = ["quic-transport"]

[[example]]
name = "message_quic_server"
required-features = ["quic-transport"]

[[example]]
name = "message_quic_client"
required-features = ["quic-transport"]

[[example]]
name = "message_tls_broker"
required-features = ["tls-transport"]

[[example]]
name = "message_tls_server"
required-features = ["tls-transport"]

[[example]]
name = "message_tls_client"
required-features = ["tls-transport"]
